# rope_sandbox

./: get_hash.sh  make_data_dir.sh  meson.build
src/: CAlpha.cpp  CAlpha.h  Chain.cpp  Chain.h  Collective.cpp  Collective.h  Complex.cpp  Complex.h  Composite.cpp  Composite.h  Display.cpp  Display.h  Ensemble.cpp  Ensemble.h  Ensemble_sh.h  Entity.cpp  Entity.h  Handle.cpp  Handle.h  Handleable.cpp  Handleable.h  Kabsch.cpp  Kabsch.h  MyDictator.cpp  MyDictator.h  Ramaplot.cpp  Ramaplot.h  Ramaplot_sh.h  Ramapoint.cpp  Ramapoint.h  StructureView.cpp  StructureView.h  main.cpp  quad.fsh  quad.vsh
